--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "jsonpath-ri"
-version = "0.1.0"
-authors = ["Glyn Normington <normingtong@vmware.com>"]
+version = "0.0.1"
+authors = ["Glyn Normington <glyn.normington@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
