--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
-name = "jsonpath-ri"
+name = "jsonpath_ri"
 version = "0.0.1"
 authors = ["Glyn Normington <glyn.normington@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+itertools = "0.9.0"
+json = "0.12.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.57"
+serde_yaml = "0.8.13"
+
+[dependencies.yaml-rust]
+git = "https://github.com/chyh1990/yaml-rust.git"
