--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 itertools = "0.9.0"
 json = "0.12.4"
+pest = "2.1.3"
+pest_derive = "2.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.57"
 serde_yaml = "0.8.13"
