--- a/.github/workflows/quickstart.yml
+++ b/.github/workflows/quickstart.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -34,6 +36,8 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -53,6 +57,8 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
