--- a/.github/workflows/quickstart.yml
+++ b/.github/workflows/quickstart.yml
@@ -12,6 +12,9 @@ jobs:
   check:
     name: Check
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain: [ stable, "1.43.0" ]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -22,7 +25,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: ${{ matrix.toolchain }}
           override: true
 
       - name: Run cargo check
@@ -33,6 +36,9 @@ jobs:
   test:
     name: Test Suite
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain: [ stable, "1.43.0" ]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -43,7 +49,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: ${{ matrix.toolchain }}
           override: true
 
       - name: Run cargo test
@@ -64,6 +70,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
+          # lint using only the latest stable
           toolchain: stable
           override: true
           components: rustfmt, clippy
