--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Glyn Normington <glyn.normington@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+by_address = "1.0.4"
 itertools = "0.9.0"
 json = "0.12.4"
 pest = "2.1.3"
