--- a/.github/workflows/quickstart.yml
+++ b/.github/workflows/quickstart.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toolchain: [ stable, "1.43.0" ]
+        toolchain: [ stable ]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toolchain: [ stable, "1.43.0" ]
+        toolchain: [ stable ]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
